# tsrceKahan

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  tsrceKahan.cpp  tsrceKahan.h
excerpt/include/: excerpt.h
excerpt/src/: CMakeLists.txt  excerpt.cpp
inc/: excerpt.h
